# aisd_trainee_project_iitb_racing

racecar/: package.xml  setup.py
racecar/config/: racecar_control.yaml
racecar/launch/: iitb_racecar.launch.py  joint_controller.launch.py  robot_state_publisher.launch.py
racecar/racecar/: control.py  vehicle_model.py
racecar_description/: CMakeLists.txt  package.xml
racecar_description/urdf/: macros.urdf.xacro  racecar.gazebo  racecar.urdf.xacro
racecar_plugins/: CMakeLists.txt  package.xml
racecar_plugins/include/racecar_plugins/: racecar_plugin.hpp
racecar_plugins/src/: racecar_plugin.cpp
