<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racecar_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="patelvishwam08@gmail.com">vishwam</maintainer>
  <license>TODO: License declaration</license>

    <depend>ament_index_python</depend>
  <depend>xacro</depend>
  <depend>rqt_gui</depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <!-- <depend>racecar_description</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
